Adding ImageToMatrix.toInterleavedRGB,